--- a/.github/workflows/code_checker.yml
+++ b/.github/workflows/code_checker.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependency
         run: |
             pip install -r requirements.txt
-            pip install mypy pre-commit pytest pytest-asyncio pytest-cov ruff
+            pip install mypy pre-commit ruff
       - uses: actions/cache@v5
         with:
           path: ~/.cache/pre-commit
@@ -35,7 +35,4 @@ jobs:
       - name: Run pre-commit
         run: pre-commit run --all-files --show-diff-on-failure --color=always
         shell: bash
-      - name: pytest
-        run: |
-            pytest
 
